--- a/courses.html
+++ b/courses.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <main>
-    <section id="home" class="courses-hero">
+    <section id="home" class="courses-hero" style= "background-image: url("images/_DSC3740.JPG");" >
         <header>
             <nav>
                 <ul>
